@@ -1,3 +1,9 @@
+2005-03-03  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* include/tr1/functional: Convert relative path.
+
+	* docs/doxygen/user.cfg.in: Add tr1 includes.
+
 2005-03-02  Jonathan Wakely  <redi@gcc.gnu.org>
 	    Benjamin Kosnik  <bkoz@redhat.com>
 
